--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "homepage": "https://github.com/Mark33Mark/team-key-data-generator#readme",
   "devDependencies": {
-    "jest": "^27.3.1"
+    "jest": "^27.3.1",
+    "jest-html-reporter": "^3.4.1"
   },
   "dependencies": {
     "inquirer-table-prompt": "^0.2.1"
